upgraded the version of next due to vulnerabilties

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@types/react-google-recaptcha": "^2.1.8",
     "@vercel/analytics": "^1.1.1",
     "@vercel/postgres": "^0.5.1",
+    "eslint-config-next": "^14.2.3",
     "google-auth-library": "^8.9.0",
     "google-spreadsheet": "^4.1.0",
     "googleapis": "^126.0.1",
-    "next": "^13.5.2",
+    "next": "^14.2.3",
     "prettier": "^3.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "resend": "^1.0.0",
